@@ -6,6 +6,8 @@ ikiwiki (2.51) UNRELEASED; urgency=low
     titles, rather than the default page name. Based on a patch from 
     Jaldhar H. Vyas, Closes: #484510
   * hnb: New plugin, contributed by Axel Beckert.
+  * meta: Store "description" in pagestate for use by other plugins.
+  * map: Support show=description.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Jun 2008 15:03:33 -0400
 
